@@ -1,5 +1,8 @@
 Fixes and changes since PyProtocols 0.9.2
 
+ - Fixed 'protocols.sequenceOf()' being unable to directly imply a non-sequence
+   protocol.
+
  - The 'factory' parameter to 'adapt()' was REMOVED.  An informal survey of
    PyProtocols' users indicated that nobody was using it to any significant
    degree, and its removal was unopposed.  This feature was an extension to
